Fixing playback on mobile.

--- a/app/assets/stylesheets/views/pages.css.scss
+++ b/app/assets/stylesheets/views/pages.css.scss
@@ -30,8 +30,8 @@
   .intro-play-button {
     position: absolute;
     z-index: 1;
-    width: 900px;
-    height: 506px;
+    width: 100%;
+    height: 100%;
     background: image-url('play.png') no-repeat 400px 208px;
     text-indent: -9999px;
     cursor: pointer;
